Fix people lookup API to stream local metadata
